<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_text">EZMira logos are intellectual property of Actions Microelectronics. All rights reserved.</string>
    <string name="action_settings">Settings</string>
    <string name="ad_unit_id">ca-app-pub-1893389243244754/9186690110</string>
    <string name="amsdk_key">89b33dbc0a35f34deb3deaa79100e83ec31433a9</string>
    <string name="amsdk_secret">eb256f14bf8d945822a877fee0d5f1ac57b196ce</string>
    <string name="app_name">EZMira</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="base_ezcast_url">https://www.ezcast.com</string>
    <string name="base_iezvu_url">https://www.iezvu.com</string>
    <string name="base_mira_url">https://app.mirascreen.com</string>
    <string name="base_service_mira_url">https://service.mirascreen.com</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bt_connect_guide">Set up Wi-Fi via Bluetooth</string>
    <string name="build_vlc_revision">019383e</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_connecting_to_device">Connecting to %1$s</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip Ad</string>
    <string name="cast_expanded_controller_skip_ad_text">You can skip ad in %1$d…</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">@android:string/ok</string>
    <string name="cast_invalid_stream_duration_text">--:--</string>
    <string name="cast_invalid_stream_position_text">--:--</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="checking_firmware">Checking for update...</string>
    <string name="chromecast_guide">Chromecast Guidelines</string>
    <string name="chromecast_mirror_help">Chromecast Mirror</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_title">Exit?</string>
    <string name="default_web_client_id">122476811002-k90ltk3mk6d0e3pl2puhenn9ivh45501.apps.googleusercontent.com</string>
    <string name="discover_title">Discover</string>
    <string name="dlna_subtitle" />
    <string name="dlna_title">DLNA</string>
    <string name="dont_show_string">Do not show this again</string>
    <string name="durationformatlong">%1$d:%3$02d:%5$02d</string>
    <string name="durationformatshort">%2$d:%5$02d</string>
    <string name="expand_button_title">Advanced</string>
    <string name="ezcast_js_version">1.0.0.0</string>
    <string name="ezmira_guide">Configuration Guidelines</string>
    <string name="ezmirror_subtitle">Mirror your device screen using Miracast</string>
    <string name="ezmirror_title">EZMirror</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="faq">Help</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url">https://ezmira-523d3.firebaseio.com</string>
    <string name="game_title">Game</string>
    <string name="gcm_defaultSenderId">122476811002</string>
    <string name="google_api_key">AIzaSyDopzoxf-AV9FLUjMusBdjxOHUrTI8uN_Y</string>
    <string name="hotspot">Hotspot</string>
    <string name="hotspot_SSID">SSID</string>
    <string name="hotspot_guide">GUIDE</string>
    <string name="hotspot_guide_button">Show Guide</string>
    <string name="hotspot_password">Password</string>
    <string name="hotspot_setting">HOTSPOT PREFERENCE</string>
    <string name="hotspot_wifiap_hint">"Start from Android 8.0, please fill in the smart phone's Wi-Fi hotspot SSID and password manually to share internet connectivity with EZCast dongle."</string>
    <string name="mira_about">About EZMira</string>
    <string name="mira_notification">Notification</string>
    <string name="miraapp_airplay_title">EZMira App</string>
    <string name="miracast_guide">Miracast Guidelines</string>
    <string name="miracast_title">Miracast/Chromecast</string>
    <string name="miracast_turorial_subtitle">Check out Miracast connection guide</string>
    <string name="miracast_turorial_title">Miracast Tutorial</string>
    <string name="ok">OK</string>
    <string name="qrcode_guide">Scan QRCode to connect wifi</string>
    <string name="search_device_title">Connect</string>
    <string name="term_of_use_title">Terms of Use</string>
    <string name="text_bt_setting">Turn on bluetooth</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_casting_setting">Select casting device</string>
    <string name="text_continue">Continue</string>
    <string name="text_direct_setup_bluetooth">Please use direct link to set up your Wi-Fi</string>
    <string name="text_game_hint_01">Please go to Connect > EZMira app and select your device to play games on big screen. Or click continue to play on mobile.</string>
    <string name="text_game_hint_02">"If there's no sound when playing, please use Miracast/ Chromecast to cast with audio, or pair a bluetooth speaker."</string>
    <string name="text_setup_bluetooth_hint">Go to Setting > Wi-Fi > Enter password > Launch app</string>
    <string name="text_setup_bluetooth_method_not_supported">Your device may not be supported this set up method</string>
    <string name="title_analytics">Analytics</string>
    <string name="title_firebase_analytics">Firebase Analytics</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_stage">Stage Site</string>
</resources>