<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/text_color_01" android:gravity="center" android:id="@id/tv_no_supported_device_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dp" android:text="@string/text_setup_bluetooth_method_not_supported" android:layout_alignParentTop="true" />
    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Small" android:textColor="@color/text_color_02" android:gravity="center" android:id="@id/tv_supported_device" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="EZCast2 dongles , etc" android:layout_below="@id/tv_no_supported_device_title" />
    <ImageView android:id="@id/iv_no_valid_bt_device" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="20.0dp" android:src="@drawable/bg_bt_no_valid_device" android:layout_below="@id/tv_supported_device" android:layout_centerHorizontal="true" />
    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/text_color_01" android:gravity="center" android:id="@id/tv_no_suppord_device_msg" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/text_direct_setup_bluetooth" android:layout_below="@id/iv_no_valid_bt_device" />
    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Small" android:textColor="@color/text_color_02" android:gravity="center" android:id="@id/tv_no_suppord_device_hint" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/text_setup_bluetooth_hint" android:layout_below="@id/tv_no_suppord_device_msg" />
    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textColor="@android:color/white" android:gravity="center" android:id="@id/tv_ok" android:background="@color/light_blue" android:layout_width="match_parent" android:layout_height="80.0dp" android:text="@string/ok" android:layout_alignParentBottom="true" />
</RelativeLayout>
