<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/iv_dialog" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_dialog" />
    <TextView android:gravity="center_horizontal" android:id="@id/tv_hint_02" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/text_game_hint_02" android:layout_marginStart="16.0dp" android:layout_marginEnd="16.0dp" app:layout_constraintBottom_toBottomOf="@id/iv_dialog" app:layout_constraintEnd_toEndOf="@id/iv_dialog" app:layout_constraintStart_toStartOf="@id/iv_dialog" app:layout_constraintTop_toTopOf="@id/iv_dialog" app:layout_constraintVertical_bias="0.1" />
    <Button android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textStyle="bold" android:textColor="@drawable/connect_button_text_color" android:id="@id/btn_casting_setting" android:background="@drawable/gameinfo_connect_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_casting_setting" app:layout_constraintBottom_toTopOf="@id/btn_bt_setting" app:layout_constraintEnd_toEndOf="@id/iv_dialog" app:layout_constraintStart_toStartOf="@id/iv_dialog" app:layout_constraintTop_toBottomOf="@id/tv_hint_02" />
    <Button android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textStyle="bold" android:textColor="@drawable/connect_button_text_color" android:id="@id/btn_bt_setting" android:background="@drawable/gameinfo_connect_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_bt_setting" app:layout_constraintBottom_toBottomOf="@id/iv_dialog" app:layout_constraintEnd_toEndOf="@id/iv_dialog" app:layout_constraintStart_toStartOf="@id/iv_dialog" app:layout_constraintTop_toBottomOf="@id/btn_casting_setting" />
</androidx.constraintlayout.widget.ConstraintLayout>
