<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/iv_dialog" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_dialog" />
    <TextView android:gravity="center_horizontal" android:id="@id/tv_hint_01" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/text_game_hint_01" android:layout_marginStart="16.0dp" android:layout_marginEnd="16.0dp" app:layout_constraintBottom_toBottomOf="@id/iv_dialog" app:layout_constraintEnd_toEndOf="@id/iv_dialog" app:layout_constraintStart_toStartOf="@id/iv_dialog" app:layout_constraintTop_toTopOf="@id/iv_dialog" app:layout_constraintVertical_bias="0.2" />
    <Button android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textStyle="bold" android:textColor="@drawable/connect_button_text_color" android:id="@id/btn_continue" android:background="@drawable/miracast_connect_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_continue" app:layout_constraintBottom_toBottomOf="@id/iv_dialog" app:layout_constraintEnd_toStartOf="@id/btn_cancel" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="@id/iv_dialog" app:layout_constraintTop_toBottomOf="@id/tv_hint_01" />
    <Button android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textStyle="bold" android:textColor="@drawable/connect_button_text_color" android:id="@id/btn_cancel" android:background="@drawable/miracast_connect_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_cancel" app:layout_constraintEnd_toEndOf="@id/iv_dialog" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/btn_continue" app:layout_constraintTop_toTopOf="@id/btn_continue" />
</androidx.constraintlayout.widget.ConstraintLayout>
